# xmrig-nonces-heatmap

./: CMakeLists.txt  README.md  example.png.json
cmake/: OpenSSL.cmake  cpu.cmake  flags.cmake  os.cmake
res/: app.rc
src/: App.cpp  App.h  Daemon.cpp  Daemon.h  Heatmap.cpp  Heatmap.h  Job.cpp  Job.h  Network.cpp  Network.h  Nonces.cpp  Nonces.h  main.cpp  version.h
src/base/: base.cmake
src/base/io/: Console.cpp  Console.h  Env.cpp  Env.h  Signals.cpp  Signals.h
src/base/io/json/: Json.cpp  Json.h  JsonRequest.cpp  JsonRequest.h  Json_unix.cpp  Json_win.cpp
src/base/io/log/: Log.cpp  Log.h  Tags.cpp  Tags.h
src/base/io/log/backends/: ConsoleLog.cpp  ConsoleLog.h
src/base/kernel/: Entry.cpp  Entry.h  Platform.cpp  Platform.h  Platform_mac.cpp  Platform_unix.cpp  Platform_win.cpp  Process.cpp  Process.h  Process_unix.cpp  Process_win.cpp  version-common.h
src/base/kernel/config/: ConfigFile.cpp  ConfigFile.h  usage.h
src/base/kernel/interfaces/: IConsoleListener.h  IDnsListener.h  IHttpListener.h  IJsonReader.h  ILogBackend.h  ISignalListener.h  ITimerListener.h
src/base/net/dns/: Dns.cpp  Dns.h  DnsRecord.cpp  DnsRecord.h
src/base/net/http/: Fetch.cpp  Fetch.h  HttpClient.cpp  HttpClient.h  HttpContext.cpp  HttpContext.h  HttpData.cpp  HttpData.h
src/base/net/https/: HttpsClient.cpp  HttpsClient.h
src/base/net/tools/: MemPool.h  NetBuffer.cpp  NetBuffer.h
src/base/tools/: Arguments.cpp  Arguments.h  Baton.h  Buffer.h  Chrono.h  Cvt.cpp  Cvt.h  Handle.h  Object.h  String.cpp  String.h
src/config/: Config.cpp  Config.h  properties.h
src/interfaces/: INetworkListener.h
